Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/typeAnnotations/failures/common/parambounds/MissingAnnotationValue.out
MissingAnnotationValue.java:10:40: compiler.err.annotation.missing.default.value: A, field
1 error
